{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 27,
  "lineage": "eb3de1cd-1c16-d573-2dd0-146245121e11",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724594573076:internet-gateway/igw-0b610ba18019dbece",
            "id": "igw-0b610ba18019dbece",
            "owner_id": "724594573076",
            "tags": {
              "Name": "sagemaker-logs-poc-igw"
            },
            "tags_all": {
              "Name": "sagemaker-logs-poc-igw"
            },
            "vpc_id": "vpc-0fd896a0c4c0513e0"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b610ba18019dbece",
            "id": "r-rtb-0f2c283ebe2c8048c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2c283ebe2c8048c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724594573076:route-table/rtb-0f2c283ebe2c8048c",
            "id": "rtb-0f2c283ebe2c8048c",
            "owner_id": "724594573076",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sagemaker-logs-poc-public-rt"
            },
            "tags_all": {
              "Name": "sagemaker-logs-poc-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd896a0c4c0513e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cad331f5990cd574",
            "route_table_id": "rtb-0f2c283ebe2c8048c",
            "subnet_id": "subnet-005df929edd1ea5e5"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sagemaker_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724594573076:security-group/sg-04e45c550a6e879ee",
            "description": "Allow inbound traffic for SageMaker Notebook",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04e45c550a6e879ee",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH inbound",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sagemaker-logs-poc-sagemaker-sg",
            "name_prefix": "",
            "owner_id": "724594573076",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sagemaker-logs-poc-sagemaker-sg"
            },
            "tags_all": {
              "Name": "sagemaker-logs-poc-sagemaker-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fd896a0c4c0513e0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724594573076:subnet/subnet-005df929edd1ea5e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-005df929edd1ea5e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "724594573076",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sagemaker-logs-poc-public-subnet"
            },
            "tags_all": {
              "Name": "sagemaker-logs-poc-public-subnet"
            },
            "vpc_id": "vpc-0fd896a0c4c0513e0"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724594573076:vpc/vpc-0fd896a0c4c0513e0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce7962eaee125d68",
            "default_route_table_id": "rtb-0fd43475517b4ddcc",
            "default_security_group_id": "sg-02b3e63d74e830fea",
            "dhcp_options_id": "dopt-042dbb342beb44e2a",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0fd896a0c4c0513e0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd43475517b4ddcc",
            "owner_id": "724594573076",
            "tags": {
              "Name": "sagemaker-logs-poc-main"
            },
            "tags_all": {
              "Name": "sagemaker-logs-poc-main"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}